--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 Sua mensagem:
                 <textarea name="message" rows="4" required></textarea>
                 <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_next" value="http://127.0.0.1:5500/PROJETOS/%C3%A1lamo%20contabilidade/index.html">
                 <button type="submit">enviar</button>
             </form>
         </section>
